# bce

./: .gitignore  CMakeLists.txt  README.md  cli.c  cli.h  completion.c  completion.db  completion.h  completion_input.c  completion_input.h  completion_model.c  completion_model.h  data_model.c  data_model.h  dbutil.c  dbutil.h  download.c  download.h  error.c  error.h  input.c  input.h  kubectl.json  linked_list.c  linked_list.h  main.c  prune.c  prune.h  schema.c  schema.h  schema.sql  test.sh  user_ops.c  user_ops.h  uuid4.c
.run/: Run (required).run.xml
test/: CMakeLists.txt  completion_input_tests.cpp  completion_model_tests.cpp  download_tests.cpp  kubectl_data.sql  linked_list_tests.cpp  xyz.json
